nginx-saml-proxy/ingress-server1-myapp2.yaml
---
# Ingress for myapp2
# Example showing app with access limited by group, passing 
#   x-saml-user auth header to backend
#
# Requires SAML, with group u_somegroup
# Uses rewrite to strip path prefix
# Passes X-SAML-User header from auth to backend service
#
# Customize: name, namespace, group name in auth-url, host, path, backend

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server1-myapp2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "https://$host/saml/status/group/u_somegroup"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/saml/login"
    nginx.ingress.kubernetes.io/auth-response-headers: x-saml-user
spec:
  rules:
  - host: server1.example.uw.edu
    http:
      paths:
      - path: /myapp2(/|$)(.*)
        backend:
          serviceName: myapp2
          servicePort: http
