nginx-saml-proxy/ingress-server1-myapp3.yaml
---
# Ingress for myapp3
# Example showing app with access limited by group, rewriting 
#   x-saml-user auth header to Remote-User
#
# Requires SAML, with group u_othergroup (different from other paths)
# Does not use rewrite
# Passes X-SAML-User auth header to backend as Remote-User header
#
# Customize: name, namespace, group name in auth-url, host, path, backend

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server1-myapp3
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/saml/status/group/u_othergroup"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/saml/login"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $auth_user $upstream_http_x_saml_user;
      proxy_set_header Remote-User $auth_user;
spec:
  rules:
  - host: server1.example.uw.edu
    http:
      paths:
      - path: /myapp3
        backend:
          serviceName: myapp3
          servicePort: http
