nginx-saml-proxy/ingress-server1-myapp4.yaml
---
# Ingress for myapp4
# Does not require SAML
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server1-myapp3
  namespace: mci-monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: server1.example.uw.edu
    http:
      paths:
      - path: /myapp4
        backend:
          serviceName: myapp4
          servicePort: http
