nginx-saml-proxy/ingress-server2-main.yaml
---
# Ingress for SNI server2.example.uw.edu
# Example overriding SAML Entity ID
#
# TLS cert is manually managed, not lets encrypt
# Override SP entity ID. (Server location needs to be listed as an ACS
#   under that Entity ID.)
#
# Configure: name, namespace, X-Saml-Entity-Id and X-Saml-Acs, host names

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  # Configure name
  name: server2-main
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /saml/
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Saml-Entity-Id https://different-entity.s.uw.edu/saml;
      proxy_set_header X-Saml-Acs /saml/login;
spec:
  tls:
  - hosts:
    - server2.example.uw.edu
    secretName: server2-cert
  rules:
  - host: server2.example.uw.edu
    http:
      paths:
      - path: /saml/(.*)
        backend:
          serviceName: nginx-saml-proxy
          servicePort: http
