nginx-saml-proxy/ingress-server2-myapp5.yaml
---
# Ingress for myapp5
# Example showing basic app with access limited by group and auth cache
#
# Requires SAML, with group u_appgroup
# Enables auth caching: nginx will remember auth result instead of
#   hitting auth-url for every client request. Very useful for busy server.
#   Default cache time 5m, can be overridden with "auth-cache-duration"
#
# Customize: name, namespace, group name in auth-url, host, path, backend

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server2-myapp5
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/saml/status/group/u_appgroup"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/saml/login"
    # Enable auth caching with auth-cache-key
    nginx.ingress.kubernetes.io/auth-cache-key: $remote_user$http_authorization
    # ingress-nginx default caches 401 which causes a redirect loop, so must only cache success
    nginx.ingress.kubernetes.io/auth-cache-duration: 200 5m
spec:
  rules:
  - host: server2.example.uw.edu
    http:
      paths:
      - path: /myapp5
        backend:
          serviceName: myapp5
          servicePort: http
